syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.stamhe.springboot.common.proto";
option java_outer_classname = "CommonOuter";

package com.stamhe.springboot.common.proto;

message CommonReply {
    string Message = 1;
	int32 Code = 2;
	string Data = 3;
}